<resources>
    <string name="app_name">Banking App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="star">Star</string>
    <string name="profile">Profile</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="e_mail_hint">E - Mail</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="username">Username</string>
    <string name="sign_up">SIGN UP</string>
    <string name="welcome">Welcome</string>
    <string name="search">Search</string>
    <string name="link_text">Click to view</string>
    <string name="e_mail_address">E-Mail\nAddress</string>
    <string name="log_out">Log Out</string>
    <string name="description">Description</string>
    <string name="song_name">Song name</string>
    <string name="transactions_fragment">Transactions Fragment</string>
    <string name="financial_manager_fragment">Financial Manager Fragment</string>
    <string name="financial_manager">financial Manager</string>
    <string name="transactions">Transactions</string>
    <string name="no_account">Don\'t have an account yet? <u>Click here!</u></string>
    <string name="already_account">Already have an account? <u>Click here!</u></string>
    <string name="payment">Payment</string>
    <string name="transfer_to_own_account">Transfer to own account</string>
    <string name="transfer_to_someone_else">Transfer to someone else</string>
    <string name="exchange">Exchange</string>
    <string name="total_available_amount">Total Available Amount</string>
    <string name="add_new_card">+ Add new card</string>
    <string name="total_card_amount">Total card amount</string>
    <string name="card_number">Card Number</string>
    <string name="cvc">CVC</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="add_card">Add Card</string>
    <string name="exchange_fragment">Exchange Fragment</string>
    <string name="payment_fragment">Payment fragment</string>
    <string name="to_own_acc">To Own ACC</string>
    <string name="to_someone_else">To Someone Else</string>
    <string name="symbol_gel">\u20BE</string>
    <string name="symbol_usd">\u0024</string>
    <string name="symbol_eur">\u20AC</string>
    <string name="card_details_fragment">card details fragment</string>
    <string name="add_funds">Add funds</string>
    <string name="transfer_to_someone_else_line_break">Transfer to\n someone else</string>
    <string name="transfer_to_own_account_line_break">Transfer to\n own account</string>
    <string name="card_details">Card Details</string>
    <string name="delete_card">Delete Card</string>
    <string name="card_N">Card Number:</string>
    <string name="expiration">Expiration Date:</string>
    <string name="cvcc">CVC:</string>
    <string name="add_desired_funds">Add Desired Funds</string>
    <string name="fill_funds">Fill Funds</string>
    <string name="make_a_payment">Make a Payment</string>
    <string name="choose_your_card">Choose your card</string>
    <string name="paying_to">Paying To</string>
    <string name="choose_card">Choose Card</string>
    <string name="funds">Funds</string>
    <string name="make_a_transfer">Make a Transfer</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="enter_id_number">Enter Id Number</string>
    <string name="enter_personal_id_number">Enter Personal Id Number</string>
    <string name="cardholder">CARDHOLDER</string>
    <string name="man_manson">Man Manson</string>
    <string name="example_gmail_com">example@gmail.com</string>
</resources>