<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGrey"
    tools:context=".presentation.screen.home.new_card.NewCardFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/enter_card_details"
        android:textColor="@color/aquahaze"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardNumberInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/card_number"
        android:textColorHint="@color/currency_secondary_white"
        app:boxStrokeColor="@color/yellow"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:startIconDrawable="@drawable/ic_card"
        app:startIconTint="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/aquahaze"
            android:textColorHint="@color/currency_secondary_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardDateInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/expiration_date"
        android:textColorHint="@color/currency_secondary_white"
        app:boxStrokeColor="@color/yellow"
        app:boxStrokeWidth="2dp"
        app:layout_constraintStart_toStartOf="@id/cardNumberInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/cardNumberInputLayout"
        app:startIconDrawable="@drawable/ic_date"
        app:startIconTint="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardDateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/aquahaze"
            android:textColorHint="@color/currency_secondary_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardCvvInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/cvc"
        android:textColorHint="@color/currency_secondary_white"
        app:boxStrokeColor="@color/yellow"
        app:boxStrokeWidth="2dp"
        app:layout_constraintEnd_toEndOf="@id/cardNumberInputLayout"
        app:layout_constraintTop_toBottomOf="@id/cardNumberInputLayout"
        app:startIconDrawable="@drawable/ic_cvc"
        app:startIconTint="@color/yellow">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cardCvvEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:textColor="@color/aquahaze"
            android:textColorHint="@color/eden" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddCard"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/shape_btn_bg"
        android:text="@string/add_card"
        android:textColor="@color/aquahaze"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardDateInputLayout" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/moon_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>