<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="12dp"
    tools:context=".presentation.screen.transactions.TransactionsFragment">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPayment"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_pay"
        android:text="@string/payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivTransferToOwn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/payment"
        app:layout_constraintEnd_toEndOf="@+id/ivPayment"
        app:layout_constraintStart_toStartOf="@+id/ivPayment"
        app:layout_constraintTop_toBottomOf="@id/ivPayment" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivTransferToOwn"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_wallet"
        app:layout_constraintEnd_toStartOf="@+id/ivTransferToSomeoneElse"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivPayment"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxEms="4"
        android:text="@string/transfer_to_own_account"
        app:layout_constraintEnd_toEndOf="@+id/ivTransferToOwn"
        app:layout_constraintStart_toStartOf="@+id/ivTransferToOwn"
        app:layout_constraintTop_toBottomOf="@+id/ivTransferToOwn" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivTransferToSomeoneElse"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_transact"
        app:layout_constraintEnd_toStartOf="@+id/ivExchange"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivTransferToOwn"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:gravity="center"
        android:text="@string/transfer_to_someone_else"
        app:layout_constraintEnd_toEndOf="@+id/ivTransferToSomeoneElse"
        app:layout_constraintStart_toStartOf="@+id/ivTransferToSomeoneElse"
        app:layout_constraintTop_toBottomOf="@+id/ivTransferToSomeoneElse" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivExchange"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:background="@color/yellow"
        android:src="@drawable/ic_exchange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivTransferToSomeoneElse"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exchange"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/ivExchange"
        app:layout_constraintStart_toStartOf="@+id/ivExchange"
        app:layout_constraintTop_toBottomOf="@+id/ivExchange" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="77dp"
        android:alpha="0.1"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPayment" />

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvContacts"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toTopOf="@id/view2"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    tools:listitem="@layout/contacts_rv_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>